--- a/_data/members.yml
+++ b/_data/members.yml
@@ -106,7 +106,7 @@ CurrentMembers:
         
   - Institute: "University of Bergen"
     MembersList:
-      - name: "Marija Slavkovik"
+      - name: "Prof. Marija Slavkovik"
         orcid: "https://orcid.org/0000-0003-2548-8623"
         website: "https://slavkovik.com/"
 
