--- a/_data/members.yml
+++ b/_data/members.yml
@@ -68,7 +68,7 @@ CurrentMembers:
         website: "https://mengweixu.netlify.app/"
         orcid: "https://orcid.org/0000-0003-4978-3061"
         
-  - Institute: "University of Derby"
+  - Institute: "University of Nottingham"
     MembersList :
       - name: "Dr Matt Luckcuck"
         website: "https://mluckcuck.github.io/"
