--- a/_data/members.yml
+++ b/_data/members.yml
@@ -56,7 +56,8 @@ CurrentMembers:
         orcid: "https://orcid.org/0000-0003-0130-1174"
 
       - name: "Yifan Xu"
-        website: "https://www.research.manchester.ac.uk/portal/yifan.xu.html"
+        website: "https://xulily9.github.io/"
+        orcid: "https://orcid.org/0000-0003-2303-1531"
 
       - name: "Dr Youcheng Sun"
         website: "https://www.research.manchester.ac.uk/portal/youcheng.sun.html"
