--- a/_data/members.yml
+++ b/_data/members.yml
@@ -34,7 +34,7 @@ CurrentMembers:
         orcid: "https://orcid.org/0000-0003-1840-7178"
         
       - name: "Simon Kolker"
-        website: "https://www.linkedin.com/in/simonkolker/?originalSubdomain=uk"
+        website: "https://www.linkedin.com/in/simonkolker"
 
       - name: "Dr Georgios Kourtis"
         website: "https://dblp.org/pid/190/7186.html"
