--- a/_data/members.yml
+++ b/_data/members.yml
@@ -101,7 +101,7 @@ CurrentMembers:
         website: "https://rafaelcaue.github.io/"
         orcid: "https://orcid.org/0000-0001-6666-6954"
 
-  - Institute: "University of Genova"
+  - Institute: "University of Modena and Reggio Emilia"
     MembersList :
       - firstName: "Dr Angelo"
         secondName: "Ferrando"
