Updating to use W3.css for layouts. (Should basically look the same)

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ email:
 author: Autonomy and Verification Network
 
 keywords: autonomous systems, robotics, artificial intelligence, formal verification, sensor systems, programming, formal modelling
-description: The Autonomy and Verification Network is distributed across several universities, including The University of Manchester, University of Liverpool, Liverpool John Moores University, and Lancaster University Leipzig
+description: The Autonomy and Verification Network is distributed across several universities, including The University of Manchester, University of Nottingham, University of Aberdeen, and University of Modena and Reggio Emilia 
 
 # Only use this if you are serving your site via Github Pages
 #github:
