--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,8 +1,8 @@
 CurrentMembers:
   - Institute: "University of Manchester"
     MembersList:
-      - firstName: "Ben Andrew"
-        secondName: "Abeywickrama"
+      - firstName: "Ben "
+        secondName: "Andrew"
 
       - firstName: "Kwai wa"
         secondName: "Tse (Sky)"
