--- a/_data/members.yml
+++ b/_data/members.yml
@@ -85,7 +85,11 @@ CurrentMembers:
       - firstName: "Dr Yifan"
         secondName: "Xu"
         website: "https://xulily9.github.io/"
-        orcid: "https://orcid.org/0000-0003-2303-1531"        
+        orcid: "https://orcid.org/0000-0003-2303-1531"
+        
+      - firstName: "Dr Ray"
+        secondName: "Limarga"
+        website: "https://scholar.google.com/citations?user=1vBTDV4AAAAJ"
         
   - Institute: "University of Nottingham"
     MembersList :
