--- a/_data/members.yml
+++ b/_data/members.yml
@@ -57,7 +57,8 @@ CurrentMembers:
         
       - firstName: "Simon"
         secondName: "Kolker"
-        website: "https://www.linkedin.com/in/simonkolker/?originalSubdomain=uk"
+        website: "https://sameysimon.github.io/"
+        orcid: "https://orcid.org/0000-0001-9144-2856"
 
       - firstName: "Dr Georgios"
         secondName: "Kourtis"
