--- a/_data/members.yml
+++ b/_data/members.yml
@@ -69,6 +69,9 @@ CurrentMembers:
         secondName: "Pereira"
         website: "https://www.ramonfpereira.com/"
 
+      - firstName: "Dr Yasmeen"
+        secondName: "Rafiq"
+
       - firstName: "Dr Conor"
         secondName: "Reynolds"
         website: "https://creynolds.ie/"
