--- a/_data/members.yml
+++ b/_data/members.yml
@@ -59,7 +59,7 @@ CurrentMembers:
       - firstName: "Dr. Mehran"
         secondName: "Hosseini"
         website: "https://www.mehranhosseini.com/"
-        orcird: "https://orcid.org/0000-0002-9227-3078"
+        orcid: "https://orcid.org/0000-0002-9227-3078"
 
       - firstName: "Dr Yasmeen"
         secondName: "Rafiq"
