--- a/_data/members.yml
+++ b/_data/members.yml
@@ -64,8 +64,8 @@ CurrentMembers:
       - firstName: "Dr Yasmeen"
         secondName: "Rafiq"
 
-      - firstName: "Long Le"
-        secondName: "Hoang" 
+      - firstName: "Long"
+        secondName: "Le" 
 
       - firstName: "Dr Hazel"
         secondName: "Taylor"
